new shoot variants

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>App</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Antonio:wght@300&display=swap"
       rel="stylesheet"
     />
+
+    <style>
+      @font-face {
+        font-family: 'Zen-Dots';
+        font-weight: 400px;
+        font-style: normal;
+        src: url('./assets/fonts/ZenDots-Regular.ttf');
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
